--- a/index.css
+++ b/index.css
@@ -1,3 +1,39 @@
-* {
-    
+html, body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 1rem;
+    font-family: "Lato" ,sans-serif;
+    color: #666666;
+    height: 100%;
 }
+
+.background--image1 {
+    background-image: url(./images/bg.jpeg);
+    min-height: 100%;
+}
+
+.background--image2 {
+    background-image: url(./images/bg2.jpeg);
+    height: 80%;
+}
+
+.background--image3 {
+    background-image: url(./images/bg3.jpeg);
+    height: 80%;
+}
+
+.background--image4 {
+    background-image: url(./images/bg4.jpeg);
+    height: 80%;
+}
+
+.background--image1,
+.background--image2,
+.background--image3,
+.background--image4 {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
