--- a/index.css
+++ b/index.css
@@ -39,8 +39,8 @@ html, body {
     justify-content: center;
     align-items: center;*/
     position: relative;
-    /* todo parallax effect */
-
+    opacity: 0.7;
+    background-attachment: fixed;
 }
 
 .heading-container {
@@ -48,10 +48,87 @@ html, body {
     top: 50%;
     width: 100%;
     position: absolute;
-    font-size: 3rem;text-transform: uppercase;
+    font-size: 3rem;
+    text-transform: uppercase;
     letter-spacing: 0.5rem;
 }
 
 .heading-container__heading {
-    
+    background-color: black;
+    color: white;
+    padding: 2rem;
+    border-top-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    outline: 0.5rem inset purple;
+    outline-offset: 1rem;
+}
+
+.heading-container__logo {
+    width: 30%;
+}
+
+.heading-container__text {
+    background-color: black;
+    color: white;
+    padding: 0.7rem;
+    text-transform: capitalize;
+    border-radius: 0.7rem 0rem ;
+    outline: 0.4rem inset purple;
+    outline-offset: 0.2rem;
+}
+
+.section {
+    text-align: center;
+    padding: 3rem 5rem;
+}
+
+.section-light {
+    background-color: #f1f1f1;
+    color: #666666;
+    line-height: 1.8rem;
+}
+
+.section-dark {
+    background-color: #282e34;
+    color: #fff;
+    line-height: 1.8rem;
+
+}@media(max-width:768px) {
+    .heading-container {
+        font-size: 1.5rem;
+        letter-spacing: 0.5rem;
+    }
+
+    .heading-container__heading {
+        padding: 0.7rem;
+        border-radius: 1rem 0rem 1rem 0rem;
+        outline: 0.5rem inset purple;
+        outline-offset: 1rem;
+    }
+
+    .heading-container__text {
+        padding: 0.7rem;
+        border-radius: 0.7rem 0rem 0.7rem 0rem;
+        outline: 0.4rem inset purple;
+        outline-offset: 0.2rem;
+        line-height: 3rem;
+        font-size: 0.5rem;
+    }
+
+    .section {
+        padding: 1.5rem 2rem;
+    }
+
+    .heading-container__logo {
+        width: 50%;
+    }
+}
+
+@media(max-width:500px) {
+    .background--image1,
+    .background--image2,
+    .background--image3,
+    .background--image4 {
+        background-attachment: scroll;
+    }
 }
